<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="textSize_small">Small</string>
    <string name="textSize_normal">Normal</string>
    <string name="textSize_large">Large</string>
    <string name="textSize_xlarge">Extra Large</string>
    <string-array name="textSize_display">                      
        <item>@string/textSize_small</item>
        <item>@string/textSize_normal</item>
        <item>@string/textSize_large</item>
        <item>@string/textSize_xlarge</item>
    </string-array>
    <string-array name="textSize_values" translatable="false">  
        <item>SMALL</item>
        <item>NORMAL</item>
        <item>LARGE</item>
        <item>XLARGE</item>
    </string-array>
    <string name="timeMode_noon">Solar Noon</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="midnight">Midnight</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="timeMode_civil">Civil Twilight</string>
    <string name="timeMode_civil_morning">Civil Twilight (morning)</string>
    <string name="timeMode_civil_evening">Civil Twilight (evening)</string>
    <string name="timeMode_nautical">Nautical Twilight</string>
    <string name="timeMode_nautical_morning">Nautical Twilight (morning)</string>
    <string name="timeMode_nautical_evening">Nautical Twilight (evening)</string>
    <string name="timeMode_astronomical">Astronomical Twilight</string>
    <string name="timeMode_astronomical_morning">Astronomical Twilight (morning)</string>
    <string name="timeMode_astronomical_evening">Astronomical Twilight (evening)</string>
    <string name="dawn">Dawn</string>
    <string name="dawn_civil">Civil Dawn</string>
    <string name="dawn_nautical">Nautical Dawn</string>
    <string name="dawn_astronomical">Astronomical Dawn</string>
    <string name="dusk">Dusk</string>
    <string name="dusk_civil">Civil Dusk</string>
    <string name="dusk_nautical">Nautical Dusk</string>
    <string name="dusk_astronomical">Astronomical Dusk</string>
    <string name="polar_twilight">Polar twilight</string>
    <string name="civil_night">Civil polar night</string>
    <string name="nautical_night">Nautical polar night</string>
    <string name="white_night">White night</string>
    <string name="timeMode_golden">Golden Hour</string>
    <string name="timeMode_golden_morning">Golden Hour (morning)</string>
    <string name="timeMode_golden_evening">Golden Hour (evening)</string>
    <string name="timeMode_blue8">Blue Hour (8\u00B0)</string>
    <string name="timeMode_blue4">Blue Hour (4\u00B0)</string>
    <string name="timeMode_blue_morning">Blue Hour (morning)</string>
    <string name="timeMode_blue_evening">Blue Hour (evening)</string>
    <string name="moonrise">Moonrise</string>
    <string name="moonset">Moonset</string>
    <string name="moonlight">Moonlight</string>
    <string-array name="calendar_moonrise_strings">
        <item>@string/moonrise</item>
        <item>@string/moonset</item>
        <item>@string/moonlight</item>
        <item>@string/timeMode_moon_full</item>
        <item>@string/timeMode_moon_waninggibbous</item>
        <item>@string/timeMode_moon_waningcrescent</item>
        <item>@string/timeMode_moon_new</item>
        <item>@string/timeMode_moon_waxingcrescent</item>
        <item>@string/timeMode_moon_waxinggibbous</item>
    </string-array>
    <string name="timeMode_equinox_vernal">Spring Equinox</string>
    <string name="timeMode_equinox_autumnal">Autumn Equinox</string>
    <string name="timeMode_solstice_summer">Summer Solstice</string>
    <string name="timeMode_solstice_winter">Winter Solstice</string>
    <string name="timeMode_cross_spring">Spring Cross-Quarter</string>
    <string name="timeMode_cross_autumnal">Autumn Cross-Quarter</string>
    <string name="timeMode_cross_summer">Summer Cross-Quarter</string>
    <string name="timeMode_cross_winter">Winter Cross-Quarter</string>
    <string name="timeMode_moon">Moon</string>
    <string name="timeMode_moon_new">New Moon</string>
    <string name="timeMode_moon_firstquarter">First Quarter</string>
    <string name="timeMode_moon_full">Full Moon</string>
    <string name="timeMode_moon_thirdquarter">Third Quarter</string>
    <string name="timeMode_moon_super">Supermoon</string>
    <string name="timeMode_moon_micro">Micromoon</string>
    <string name="timeMode_moon_superfull">Super Full Moon</string>
    <string name="timeMode_moon_superfull_short">@string/timeMode_moon_super</string>
    <string name="timeMode_moon_supernew">Super New Moon</string>
    <string name="timeMode_moon_supernew_short">@string/timeMode_moon_super</string>
    <string name="timeMode_moon_microfull">Micro Full Moon</string>
    <string name="timeMode_moon_microfull_short">@string/timeMode_moon_micro</string>
    <string name="timeMode_moon_micronew">Micro New Moon</string>
    <string name="timeMode_moon_micronew_short">@string/timeMode_moon_micro</string>
    <string name="timeMode_moon_apogee">Apogee</string>
    <string name="timeMode_moon_perigee">Perigee</string>
    <string name="timeMode_moon_waxingcrescent">Waxing Crescent</string>
    <string name="timeMode_moon_waxinggibbous">Waxing Gibbous</string>
    <string name="timeMode_moon_waninggibbous">Waning Gibbous</string>
    <string name="timeMode_moon_waningcrescent">Waning Crescent</string>
    <string name="configLabel_calendars">Calendars</string>
    <string name="configLabel_options">Options</string>
    <string name="configLabel_calendars_location">Location</string>
    <string name="calendar_solstice_displayName">Solstices, Equinoxes</string>
    <string name="calendar_solstice_summary">Solstices, Equinoxes, and Cross-Quarter days</string>
    <string name="calendar_moonPhase_displayName">Moon Phases</string>
    <string name="calendar_moonPhase_summary">Synodic month</string>
    <string name="calendar_moonApsis_displayName">Moon Apsis</string>
    <string name="calendar_moonApsis_summary">Anomalistic month</string>
    <string name="calendar_moonrise_displayName">@string/timeMode_moon</string>
    <string name="calendar_moonrise_summary">Moonrise, moonset</string>
    <string name="calendar_civil_twilight_displayName">@string/timeMode_civil</string>
    <string name="calendar_civil_twilight_summary"/>
    <string name="calendar_nautical_twilight_displayName">@string/timeMode_nautical</string>
    <string name="calendar_nautical_twilight_summary"/>
    <string name="calendar_astronomical_twilight_displayName">@string/timeMode_astronomical</string>
    <string name="calendar_astronomical_twilight_summary"/>
    <string name="calendar_gold_twilight_displayName">@string/timeMode_golden</string>
    <string name="calendar_gold_twilight_summary"/>
    <string name="calendar_blue_twilight_displayName">Blue Hour</string>
    <string name="calendar_blue_twilight_summary"/>
    <string name="calendar_daylight_displayName">Daylight</string>
    <string name="calendar_daylight_summary">Sunrise, sunset, and solar noon</string>
    <string name="configLabel_calendars_enabled">Calendar Integration</string>
    <string name="configLabel_calendars_enabled_summary">Supply events to the Calendar app.</string>
    <string name="configLabel_calendars_window">Calendar Window</string>
    <string name="configLabel_calendars_window_summary">A period starting <xliff:g example="one year ago" id="calendars_window_display">%1$s</xliff:g>, ending <xliff:g example="one year from now" id="calendars_window_display">%2$s</xliff:g>.</string>
    <string name="configLabel_calendars_window0">Window (start)</string>
    <string name="configLabel_calendars_window0_summary">A period starting <xliff:g example="one year" id="calendars_window_display">%1$s</xliff:g> ago</string>
    <string name="configLabel_calendars_window1">Window (end)</string>
    <string name="configLabel_calendars_window1_summary">A period ending <xliff:g example="two years" id="calendars_window_display">%1$s</xliff:g> from now</string>
    <string name="calendars_notification_adding">Adding calendars…</string>
    <string name="calendars_notification_added">Calendars have been added.</string>
    <string name="calendars_notification_adding_failed">Failed to add calendars!</string>
    <string name="calendars_notification_clearing">Clearing calendars…</string>
    <string name="calendars_notification_cleared">Calendars have been cleared.</string>
    <string name="calendars_notification_updating">Updating calendars…</string>
    <string name="calendars_notification_updated">Calendars have been updated.</string>
    <string name="calendars_notification_reminders_updating">Updating reminders…</string>
    <string name="calendars_notification_reminders_updated">Reminders have been updated.</string>
    <string name="calendars_notification_writing">Creating calendars…</string>
    <string name="calendars_notification_written">Calendars have been saved.</string>
    <string name="calendars_notification_writing_failed">Failed to save calendars!</string>
    <string name="calendars_notification_failed">Failed to show notification! Permission was denied.</string>
    <string name="confirm_display_format" tools:common="true">%1$s\n%2$s</string>
    <string name="confirm_add_message1">Add calendar?</string>
    <string name="confirm_clear_message0">Remove calendars?</string>
    <string name="confirm_clear_message1">Remove calendar?</string>
    <string name="confirm_cancel_message">Cancel the running task?\n\nThis may result in calendars that are missing or incomplete.</string>
    <string name="confirm_cancel_yes">Confirm</string>
    <string name="confirm_cancel_no">Back</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="action_addCalendar">Add Calendar</string>
    <string name="action_saveCalendar">Save Calendar (as .ical)</string>
    <string name="action_preview">Preview</string>
    <string name="action_share">Share</string>
    <string name="action_moreSettings">More Settings</string>
    <string name="action_help">Help</string>
    <string name="title_dialog_msg">Title</string>
    <string name="reminder_dialog_msg">Reminders</string>
    <string name="flag_dialog_msg">Event Flags</string>
    <string name="template_dialog_msg">Event Template</string>
    <string name="template_dialog_title_label">Name</string>
    <string name="template_dialog_title_hint">Name</string>
    <string name="template_dialog_msg1">@string/action_preview</string>
    <string name="template_preview_warning" tools:common="true"/>
    <string name="template_dialog_desc_label">Description</string>
    <string name="template_dialog_desc_hint">Description</string>
    <string name="template_dialog_location_label">Location</string>
    <string name="template_dialog_location_hint">Location</string>
    <string name="templatestrings_dialog_msg">Event Strings</string>
    <string name="color_dialog_msg">Colour</string>
    <string name="about_dialog_title">About</string>
    <string name="privacy_permission_calendar"><![CDATA[Suntimes Calendars uses <b>calendar</b> permissions to integrate with the Calendar app. These permissions allow the app to create custom calendars and events.<br/><br/>Permissions are also required when disabling calendar integration (to remove custom calendars).]]></string>
    <string name="privacy_permissiondialog_title">Permissions</string>
    <string name="def_app_calendars_enabled" translatable="false">false</string>
    <string name="def_calendars_window0" translatable="false">31536000000</string>
    <string name="def_calendars_window1" translatable="false">63072000000</string>
    <string name="def_calendars_calendar_moonphase" translatable="false">true</string>
    <string name="def_calendars_calendar_solstice" translatable="false">true</string>
</resources>