<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/configLabel_calendars">

        <CheckBoxPreference
            android:key="app_calendars_enabled"
            android:title="@string/configLabel_calendars_enabled"
            android:summary="@string/configLabel_calendars_enabled_summary" android:defaultValue="@string/def_app_calendars_enabled" />

        <CheckBoxPreference
            android:key="app_calendars_calendar_moonPhaseCalendar"
            android:title="@string/calendar_moonPhase_displayName"
            android:icon="?attr/icActionCalendar"
            android:defaultValue="@string/def_calendars_calendar_moonphase" />

        <CheckBoxPreference
            android:key="app_calendars_calendar_solsticeCalendar"
            android:title="@string/calendar_solstice_displayName"
            android:icon="?attr/icActionCalendar"
            android:defaultValue="@string/def_calendars_calendar_solstice" />

        <ListPreference
            android:key="app_calendars_window0"
            android:title="@string/configLabel_calendars_window0"
            android:dialogTitle="@string/configLabel_calendars_window0"
            android:summary="@string/configLabel_calendars_window0_summary"
            android:entries="@array/calendars_window_display" android:entryValues="@array/calendars_window_values"
            android:defaultValue="@string/def_calendars_window0" />

        <ListPreference
            android:key="app_calendars_window1"
            android:title="@string/configLabel_calendars_window1"
            android:dialogTitle="@string/configLabel_calendars_window1"
            android:summary="@string/configLabel_calendars_window1_summary"
            android:entries="@array/calendars_window_display" android:entryValues="@array/calendars_window_values"
            android:defaultValue="@string/def_calendars_window1" />

        <Preference
            android:key="app_about"
            android:persistent="false"
            android:icon="?attr/icActionAbout"
            android:title="@string/about_dialog_title" />

    </PreferenceCategory>

</PreferenceScreen>