<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.forrestguice.suntimeswidget.calendar.SuntimesCalendarActivity">

    <item
        android:id="@+id/action_title"
        android:icon="?attr/icActionCalendar"
        android:title="@string/title_dialog_msg"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_color"
        android:icon="?attr/icActionAppearance"
        android:title="@string/color_dialog_msg"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reminders"
        android:icon="?attr/icActionReminder"
        android:title="@string/reminder_dialog_msg"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_flags"
        android:icon="?attr/icActionSettings"
        android:title="@string/flag_dialog_msg"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_template"
        android:icon="?attr/icActionSettings"
        android:title="@string/template_dialog_msg"
        app:showAsAction="never" />

</menu>
