<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?attr/dialogBackground">

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:gravity="center_vertical" android:background="?attr/colorPrimary">

        <ImageButton android:id="@+id/back_button"
            android:src="?attr/icActionBack"
            android:background="?selectableItemBackground"
            android:layout_width="48dp" android:layout_height="64dp"
            android:layout_gravity="center_vertical"
            android:paddingLeft="12dp" android:paddingStart="12dp"
            android:paddingRight="12dp" android:paddingEnd="12dp"
            android:contentDescription="@string/dialog_cancel" />

        <LinearLayout
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="8dp" android:layout_marginRight="8dp"
            android:paddingBottom="8dp" android:paddingTop="8dp">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/template_dialog_msg"
                android:textAppearance="?android:textAppearanceLarge"
                android:textSize="?attr/text_size_large"
                android:textColor="?android:textColorPrimary" />

            <TextView
                android:id="@+id/text_subtitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/template_dialog_msg1"
                android:textAppearance="?android:textAppearanceSmall"
                android:textSize="?attr/text_size_small"
                android:textColor="?android:textColorSecondary" />

        </LinearLayout>

        <CheckBox android:id="@+id/add_check" android:visibility="visible"
            android:src="?attr/icActionCalendarAdd"
            android:layout_width="wrap_content" android:layout_height="match_parent"
            android:layout_gravity="center_vertical" android:gravity="center"
            android:contentDescription="@string/action_addCalendar" />

        <!--<ImageButton android:id="@+id/add_button" android:visibility="gone"
            android:src="?attr/icActionCalendarAdd" android:background="?selectableItemBackground"
            android:layout_width="48dp" android:layout_height="match_parent"
            android:padding="8dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/action_addCalendar" />-->

        <ImageButton android:id="@+id/help_button" android:visibility="gone"
            android:src="?attr/icActionHelp" android:background="?selectableItemBackground"
            android:layout_width="48dp" android:layout_height="match_parent"
            android:padding="8dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/action_help" />

        <ImageButton android:id="@+id/menu_button"
            style="@android:style/Widget.DeviceDefault.ActionButton.Overflow"
            android:layout_width="64dp" android:layout_height="match_parent"
            android:padding="8dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/configLabel_options" />

    </LinearLayout>

    <ProgressBar android:id="@+id/progress0" android:visibility="gone"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:indeterminateOnly="true" />

    <android.support.v7.widget.RecyclerView android:id="@+id/previewArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp" android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        tools:listitem="@layout/layout_item_calendar_event" tools:itemCount="3" />

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:paddingLeft="8dp" android:paddingRight="8dp"
        android:paddingTop="4dp" android:paddingBottom="4dp"
        android:layout_marginTop="4dp"
        android:background="?attr/dialogBackgroundAlt"
        android:text="@string/template_preview_warning" />

</LinearLayout>

