<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2023 Forrest Guice
    This file is part of SuntimesCalendars.

    SuntimesCalendars is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    SuntimesCalendars is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with SuntimesCalendars.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?attr/dialogBackground">

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:gravity="center_vertical" android:background="?attr/colorPrimary">

        <ImageButton android:id="@+id/back_button"
            android:src="?attr/icActionBack"
            android:background="?selectableItemBackground"
            android:layout_width="48dp" android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:paddingLeft="12dp" android:paddingStart="12dp"
            android:paddingRight="12dp" android:paddingEnd="12dp"
            android:contentDescription="@string/dialog_cancel" />

        <LinearLayout
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="8dp" android:layout_marginRight="8dp"
            android:paddingBottom="8dp" android:paddingTop="8dp">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/flag_dialog_msg"
                android:textAppearance="?android:textAppearanceLarge"
                android:textSize="?attr/text_size_large"
                android:textColor="?android:textColorPrimary" />

            <TextView
                android:id="@+id/text_subtitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/flag_dialog_msg"
                android:textAppearance="?android:textAppearanceSmall"
                android:textSize="?attr/text_size_small"
                android:textColor="?android:textColorSecondary" />

        </LinearLayout>

        <ImageButton android:id="@+id/accept_button"
            android:src="?attr/icActionAccept" android:background="?selectableItemBackground"
            android:layout_width="64dp" android:layout_height="match_parent"
            android:padding="8dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/dialog_ok" />

    </LinearLayout>

    <TextView android:visibility="gone"
        android:id="@+id/text_debug"
        android:layout_width="match_parent" android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView android:id="@+id/eventsView"
        android:layout_width="match_parent"
        android:layout_height="0dp" android:layout_weight="1"
        android:layout_marginLeft="8dp" android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        tools:listitem="@layout/layout_item_flag" tools:itemCount="17" />

    <FrameLayout android:orientation="horizontal"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:gravity="end">

        <android.support.v7.widget.AppCompatImageButton android:id="@+id/help_button"
            android:layout_width="48dp" android:layout_height="48dp"
            android:layout_marginLeft="8dp" android:layout_marginRight="8dp"
            android:layout_gravity="start|left|center_vertical"
            android:src="?attr/icActionHelp" app:tint="?attr/text_accentColor"
            android:contentDescription="@string/action_help"
            android:background="?selectableItemBackground" />

        <Button android:id="@+id/strings_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_gravity="end|right|center_vertical"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp" android:layout_marginBottom="4dp"
            android:text="@string/templatestrings_dialog_msg" />

    </FrameLayout>

</LinearLayout>

